--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "slicemachine": "start-slicemachine --port 9999"
+    "slicemachine": "start-slicemachine --port 9999",
+    "storybook": "nuxt storybook",
+    "build-storybook": "nuxt storybook build"
   },
   "dependencies": {
     "@nuxtjs/prismic": "^1.2.6",
@@ -20,7 +22,9 @@
     "vue-slicezone": "^0.0.30"
   },
   "devDependencies": {
+    "@nuxtjs/storybook": "^4.0.2",
     "@nuxtjs/tailwindcss": "^4.0.1",
+    "babel-loader": "^8.2.2",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "postcss": "^8.2.8",
