--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "nuxt storybook build"
   },
   "dependencies": {
+    "@fontsource/prompt": "^4.2.3",
     "@nuxtjs/prismic": "^1.2.6",
     "@prismicio/vue": "^2.0.11",
     "core-js": "^3.9.1",
