--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build-storybook": "nuxt storybook build"
   },
   "dependencies": {
+    "@egjs/flicking-plugins": "^3.3.0",
+    "@egjs/vue-flicking": "^3.7.2",
     "@fontsource/prompt": "^4.2.3",
     "@nuxtjs/prismic": "^1.2.6",
     "@prismicio/vue": "^2.0.11",
